--- a/reportGenerator-core/pom.xml
+++ b/reportGenerator-core/pom.xml
@@ -6,4 +6,47 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>reportGenerator-core</artifactId>
+  
+  <dependencies>
+  	<dependency>
+  		<groupId>org.jdom</groupId>
+  		<artifactId>jdom2</artifactId>
+  		<version>2.0.4</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.google.code.gson</groupId>
+  		<artifactId>gson</artifactId>
+  		<version>2.2.2</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.commons</groupId>
+  		<artifactId>commons-io</artifactId>
+  		<version>1.3.2</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.slf4j</groupId>
+  		<artifactId>slf4j-api</artifactId>
+  		<version>1.7.2</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.slf4j</groupId>
+  		<artifactId>slf4j-simple</artifactId>
+  		<version>1.7.2</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.11</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.sun.jersey</groupId>
+  		<artifactId>jersey-client</artifactId>
+  		<version>1.17</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.sun.jersey.contribs</groupId>
+  		<artifactId>jersey-multipart</artifactId>
+  		<version>1.17</version>
+  	</dependency>
+  </dependencies>
 </project>
