--- a/ReportGenerator-webapp/.project
+++ b/ReportGenerator-webapp/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>reportGenerator-webapp</name>
+	<name>ReportGenerator-webapp</name>
 	<comment></comment>
 	<projects>
 	</projects>
