--- a/reportGenerator-core/pom.xml
+++ b/reportGenerator-core/pom.xml
@@ -6,7 +6,6 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
   <artifactId>reportGenerator-core</artifactId>
-  
   <dependencies>
   	<dependency>
   		<groupId>org.jdom</groupId>
@@ -48,5 +47,15 @@
   		<artifactId>jersey-multipart</artifactId>
   		<version>1.17</version>
   	</dependency>
+  	 <dependency>
+  	<groupId>com.sun.faces</groupId>
+  	<artifactId>jsf-api</artifactId>
+  	<version>2.2.0-m09</version>
+  </dependency>
+  <dependency>
+  	<groupId>com.sun.faces</groupId>
+  	<artifactId>jsf-impl</artifactId>
+  	<version>2.2.0-m09</version>
+  </dependency>
   </dependencies>
 </project>
