--- a/reportGenerator-webapp/pom.xml
+++ b/reportGenerator-webapp/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>ReportGenerator</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-  <artifactId>ReportGenerator-webapp</artifactId>
+  <artifactId>reportGenerator-webapp</artifactId>
   <packaging>war</packaging>
   <name>ReportGenerator-webapp Maven Webapp</name>
   <url>http://maven.apache.org</url>
