HalDatabase construction initital commit

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 
 
   	<module>HalDatabaseCreator</module>
+  	<module>ReportGenerator-haldb</module>
   </modules>
   <dependencyManagement>
   	<dependencies>
