--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
   	<module>reportGenerator-webapp</module>
   	<module>ReportGenerator-haldb</module>
   	<module>ReportGenerator-clustering</module>
+  	<module>ReportGenerator-halnewdb</module>
+  	<module>ReportGenerator-halnewDB</module>
   </modules>
   <dependencyManagement>
   	<dependencies>
