--- a/ReportGenerator-halnewDB/pom.xml
+++ b/ReportGenerator-halnewDB/pom.xml
@@ -5,6 +5,41 @@
     <artifactId>ReportGenerator</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-  <groupId>ReportGenerator-halnewDB</groupId>
   <artifactId>ReportGenerator-halnewDB</artifactId>
+
+  <dependencies>
+
+  	<dependency>
+  		<groupId>org.eclipse.persistence</groupId>
+  		<artifactId>eclipselink</artifactId>
+  		<version>2.0.0</version>
+  	</dependency>
+  	<dependency>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>javax.persistence</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+  
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.24</version>
+		</dependency>
+ 
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>reportGenerator-core</artifactId>
+		</dependency>
+  </dependencies>
+    <repositories>
+		<repository>
+			<id>EclipseLink</id>
+			<url>http://download.eclipse.org/rt/eclipselink/maven.repo</url>
+		</repository>
+	</repositories>
 </project>
